Added slice dependencies

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -33,6 +33,29 @@
           ]
         }
       }
-    ]
+    ],
+    "Services": {
+      "default-slice": {
+        "items": {
+          "text": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 5
+            }
+          },
+          "icons": {
+            "content": "award"
+          }
+        },
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        }
+      }
+    }
   }
 }
