added slice mahcine dependencies

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -183,6 +183,24 @@
           }
         }
       }
+    },
+    "MainHero": {
+      "default-slice": {
+        "primary": {
+          "subHeading": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          },
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   }
 }
