--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -201,6 +201,11 @@
           }
         }
       }
+    },
+    "CtaBanner": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   }
 }
