added containers to section for text blocks

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -206,6 +206,11 @@
       "default-slice": {
         "primary": {}
       }
+    },
+    "PriceTable": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   }
 }
