Added new service card component

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -233,6 +233,10 @@
         }
       }
     ],
-    "ServiceCards": {}
+    "ServiceCards": {
+      "default-slice": {
+        "items": {}
+      }
+    }
   }
 }
