Updated slice machine components

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -182,6 +182,12 @@
               "patternType": "HEADING",
               "blocks": 1
             }
+          },
+          "description": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
           }
         }
       }
