--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/prismic": "^1.4.0",
     "@prismicio/helpers": "^2.1.1",
     "@prismicio/slice-simulator-vue": "^0.2.0",
+    "@tailwindcss/typography": "^0.5.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-sm": "^0.1.0",
